<resources>
    <string name="app_name">Fleet Management</string>
    <string name="image_content">This is image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="label_agree_term_condition"><![CDATA[I agree to Terms & Conditions]]></string>
    <string name="label_term_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="get_your_program">Get your program</string>
    <string name="check_email">"Code has been sent to "</string>
    <string name="verification_code">Verification code</string>
    <string name="confirm">Confirm</string>
    <string name="forget_password">Forget password</string>
    <string name="training_type">Training Type</string>
    <string name="program_duration">Program Duration</string>
    <string name="program_type">Program Type</string>
    <string name="nine_month">9 Months</string>
    <string name="one_year">1 Year</string>
    <string name="six_months">6 Months</string>
    <string name="three_months">3 Months</string>
    <string name="pay">Pay</string>
    <string name="title_training_type">Good Morning, Choose any program you need it.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="reports">Reports</string>
    <string name="language">Language</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_english">English</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact us</string>
    <string name="supplement">Supplement</string>
    <string name="food">Food</string>
    <string name="body_info">Body Info</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="medical_info">Medical Info</string>
    <string name="medical_history">Medical History</string>
    <string name="injury_history">Injury History</string>
    <string name="current_job">Current Job</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="select_disease">Select Disease</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="choose_your_birth_date">Choose your birth day</string>
    <!--    <string-array name="type_of_disease">-->
    <!--        cp_selection_placeholder-->
    <!--        <item>sugar</item>-->
    <!--        <item>pressure</item>-->
    <!--    </string-array>-->
    <string name="sugar">sugar</string>
    <string name="pressure">pressure</string>

    <string name="normal">Normal</string>
    <string name="active">Active</string>
    <string name="very_active">Very active</string>
    <string name="cp_selection_placeholder">Select country</string>
    <string name="select_nationality">Select Nationality</string>
    <string name="text_did_not_receive">Did n\'t receive the Verification Code?</string>
    <string name="label_resend"><u>Resend</u></string>
    <string name="error_message_email">Please enter your email</string>
    <string name="error_message_valid_email">Please enter valid email ID</string>
    <string name="error_message_password">Please enter your password</string>
    <string name="error_message_name">Please enter your name</string>
    <string name="error_message_password_not_match">Password not match</string>
    <string name="error_message_min_length_eight">Min length is 8</string>
    <string name="error_message_check_box">Must agree to terms and conditions</string>
    <string name="error_message_verification_code">Please enter verification code</string>
    <string name="change_language">Change language</string>
    <string name="logout">LogOut</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="bulk">Bulk</string>
    <string name="gain_weight">Gain weight</string>
    <string name="lose_weight">Lose weight</string>
    <string name="cutting">Cutting</string>
    <string name="workout">Workout</string>
    <string name="nutrition">Nutrition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="count">Count</string>
    <string name="title_count_calories">Good Morning, Count your calories.</string>
    <string name="next">Next</string>
    <string name="body_fat">Body fat %</string>
    <string name="body_muscle">Body muscle %</string>
    <string name="body_water">Body water %</string>
    <string name="bmi">BMI</string>
    <string name="ar">ar-SA</string>
    <string name="your_trip">Trips</string>
    <string name="no_data">No data \n must login for show data</string>
    <string name="cat_name">Category name: </string>
    <string name="arrived">Arrived </string>
    <string name="not_arrived">Not arrived </string>
    <string name="driver_name">Driver name: </string>
    <string name="type_car">Type Car:</string>
    <string name="root_task">Task details:\n </string>
    <string name="date_from">From:  </string>
    <string name="date_to">To:</string>
    <string name="start_counter">Start counter:  </string>
    <string name="end_counter">End counter:</string>
</resources>