<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragment.SettingsFragment">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewChangePassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/change_password"
        style="@style/zeroAndWrapContent.textView" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewChangeLanguage"
        app:layout_constraintTop_toBottomOf="@+id/textViewChangePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/change_language"
        style="@style/zeroAndWrapContent.textView" />
<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/textViewContactUs"
    style="@style/zeroAndWrapContent.textView"
    app:layout_constraintTop_toBottomOf="@+id/textViewChangeLanguage"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/contact_us"
   />

</androidx.constraintlayout.widget.ConstraintLayout>
