<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.authentication.fragment.CreateAccountFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImage"
            style="@style/smallLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFullName"
            style="@style/matchAndWrapContent.textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFullName"
                style="@style/matchAndWrapContent.editText"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/matchAndWrapContent.textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFullName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                style="@style/matchAndWrapContent.editText"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/matchAndWrapContent.textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordOne"
                style="@style/matchAndWrapContent.editText"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkboxPassword"
            style="@style/checkBoxPassword"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutPassword"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            style="@style/matchAndWrapContent.textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordTwo"
                style="@style/matchAndWrapContent.editText"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkboxPasswordTwo"
            style="@style/checkBoxPassword"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutConfirmPassword"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutConfirmPassword"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutConfirmPassword" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:checkedButton="@id/radioButtonMale"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMale"
                style="@style/wrapContent.radioButton"
                android:text="@string/male" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonFemale"
                style="@style/wrapContent.radioButton"
                android:text="@string/female" />
        </RadioGroup>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:buttonTint="@color/blue_primary"
            android:checked="true"
            android:text="@string/label_agree_term_condition"
            android:textColor="@color/light_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupGender" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCreateAccount"
            style="@style/button_style"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxPrivacy" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>