<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.fragment.VerificationFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoImage"
        style="@style/smallLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        style="@style/wrapContent.textView"
        android:text="@string/check_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTimer"
        style="@style/wrapContent.textViewTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        tools:text="2:00" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDidntRecieve"
       style="@style/wrapContent.textView"
        android:text="@string/text_did_not_receive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewResent"
        style="@style/wrapContent.textViewReset"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDidntRecieve" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutVerificationCode"
        style="@style/matchAndWrapContent.textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextVerificationCode"
            style="@style/matchAndWrapContent.editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConfirm"
        style="@style/button_style"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutVerificationCode" />
</androidx.constraintlayout.widget.ConstraintLayout>