<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.fragment.ChangePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.authentication.fragment.LoginFragment">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImage"
            style="@style/largeLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            style="@style/wrapContent.textView"
            android:text="@string/check_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImage"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewTimer"
            style="@style/wrapContent.textViewTimer"
            tools:text="2:00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDidntRecieve"
            style="@style/wrapContent.textView"
            android:text="@string/text_did_not_receive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTimer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewResent"
            style="@style/wrapContent.textViewReset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDidntRecieve" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutVerificationCode"
            style="@style/matchAndWrapContent.textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textViewResent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verification_code"
                style="@style/matchAndWrapContent.editText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutOldPassword"
            style="@style/matchAndWrapContent.textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutVerificationCode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextOldPassword"
                style="@style/matchAndWrapContent.editText"
                android:hint="@string/old_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkboxPasswordOldPassword"
            style="@style/checkBoxPassword"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutOldPassword"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutOldPassword"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutOldPassword" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/matchAndWrapContent.textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutOldPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                style="@style/matchAndWrapContent.editText"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/LogoImage" />

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkboxPassword"
            style="@style/checkBoxPassword"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutPassword"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            style="@style/matchAndWrapContent.textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirmPassword"
                style="@style/matchAndWrapContent.editText"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkboxPasswordConfirmPassword"
            style="@style/checkBoxPassword"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutConfirmPassword"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutConfirmPassword"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutConfirmPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonConfirm"
            style="@style/button_style"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>